# HuaWei_Atlas_Gesture_Recognition

./: README.md
connection_node/: CMakeLists.txt  package.xml
connection_node/src/: RobotCommander.py  connection.cpp  send_command.cpp
gesturedetection/: .build_project
gesturedetection/src/: dvpp_process.cpp  gesture_detect.cpp  main.cpp
openpose_det/: CMakeLists.txt
openpose_det/src/: CMakeLists.txt  Main.cpp  graph.config
openpose_det/src/Common/: Common.cpp  Common.h
openpose_det/src/DataInput/: DataInput.cpp
openpose_det/src/ImagePreProcess/: ImagePreProcess.cpp
openpose_det/src/MindInferenceEngine/: MindInferenceEngine.cpp
openpose_det/src/MindInferenceEngineGesture/: MindInferenceEngineGesture.cpp  MindInferenceEngineGesture.h
openpose_det/src/SaveFilePostProcess/: SaveFilePostProcess.cpp  SaveFilePostProcess.h
openpose_det/src/SaveFilePostProcessGesture/: SaveFilePostProcessGesture.cpp  SaveFilePostProcessGesture.h
openpose_det_single/: .build_project  .project
openpose_det_single/src/: CMakeLists.txt  Main.cpp  Main.h  graph.config
openpose_det_single/src/Common/: Common.cpp  Common.h
openpose_det_single/src/DataInput/: DataInput.cpp  DataInput.h
openpose_det_single/src/ImagePreProcess/: ImagePreProcess.cpp  ImagePreProcess.h
openpose_det_single/src/MindInferenceEngine/: MindInferenceEngine.cpp  MindInferenceEngine.h
openpose_det_single/src/SaveFilePostProcess/: SaveFilePostProcess.cpp  SaveFilePostProcess.h
send_image/: draw&show.py  generate.py  qq.py  save_image_60fps_local.py  send_image.py  send_image_60fps.py  send_image_60fps_local.py  show_img.py
sh/mapping/: NUC_mapping.sh  atlas_mappping.sh  mapping_connection.sh  save_map.sh
